# Takin

./: README.md
src/area_triangle_3d/: CMakeLists.txt  README.md  package.xml
src/area_triangle_3d/src/: area_triangle_3d.launch  find_area_triangle_3d_client.cpp  find_area_triangle_3d_server.cpp  find_area_triangle_3d_sub.cpp
src/area_triangle_3d/srv/: AreaTriangle3D.srv
src/capra_co2_detector/: CMakeLists.txt  package.xml
src/capra_co2_detector/capra_co2/: capra_co2.cpp  capra_co2.h
src/capra_co2_detector/launch/: motors.launch
src/capra_co2_detector/src/: capra_co2_value_publisher.cpp
src/capra_co2_detector/testing/: co2  co2.cpp  co2.py
src/capra_hazardous_materials/: CMakeLists.txt  SymbolPoster.xcf  cmake_install.cmake  package.xml
src/capra_hazardous_materials/launch/: capra_hazardous_detection.launch
src/capra_hazardous_materials/src/: DisplayImage.cpp  PolygonDetector.cpp  PolygonDetector.h
src/capra_landolt_detection/: CMakeLists.txt
src/capra_motion_detection/: CMakeLists.txt  package.xml
src/capra_motion_detection/launch/: capra_motion_detection.launch
src/capra_motion_detection/src/: capra_motion_detection.cpp
src/capra_motors/: CMakeLists.txt
src/capra_qrcode_detection/launch/: qrcode_camera3d.launch  qrcode_publisher_test.launch
src/zbar_ros/launch/: example.launch
src/zbar_ros/src/: barcode_reader_nodelet.cpp
